--- a/model_viewer.html
+++ b/model_viewer.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <model-viewer src="./3d_models/substanceMesh.glb"  camera-controls touch-action="pan-y">
+    <model-viewer src="substanceMesh.glb"  camera-controls touch-action="pan-y">
     </model-viewer>
   </body>
 </html>
